--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
     <title>Homni</title>
     <meta name="description" content="Manage and access your self-hosted services across multiple servers" />
     <link rel="stylesheet" href="/custom.css">
+    <script defer src="https://analytics.oneeyeopen.com/script.js" data-website-id="f8e3702b-9047-415a-85c0-2ee674ea2589"></script>
     <style>
       /* Preload icons */
       body::before {
